--- a/login.html
+++ b/login.html
@@ -58,6 +58,7 @@
       { email: "mkhuseli@projectized.co.za", password: "MkhuseliAdmin2025!", role: "employee" },
       { email: "nokky@projectized.co.za", password: "Nokky2025!", role: "employee" },
       { email: "nqobile@projectized.co.za", password: "Nqobile2025!", role: "employee" },
+      { email: "khayelihle@projectized.co.za", password: "Khayelihle2025!", role: "employee" },
       { email: "lynette@projectized.co.za", password: "Lynettezinhle2025!", role: "employee" }
     ];
 
